[tool.poetry]
name = "pigeon"
version = "0.1.0"
description = ""
authors = ["roy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
